--- a/ref.bib
+++ b/ref.bib
@@ -10,6 +10,17 @@
   doi={10.1371/journal.pone.0055825}
 }
 
+@article{contreras2014,
+  title={Propagation of economic shocks in input-output networks: A cross-country analysis},
+  author={Contreras, Martha G Alatriste and Fagiolo, Giorgio},
+  journal={Physical Review E},
+  volume={90},
+  number={6},
+  pages={062812},
+  year={2014},
+  publisher={APS}
+}
+
 @article{defries2010,
   title={Deforestation driven by urban population growth and agricultural trade in the twenty-first century},
   author={DeFries, Ruth S and Rudel, Thomas and Uriarte, Maria and Hansen, Matthew},
@@ -65,6 +76,17 @@
   doi={10.1029/2010GL043167}
 }
 
+@article{fader2011,
+  title={Internal and external green-blue agricultural water footprints of nations, and related water and land savings through trade},
+  author={Fader, Marianela and Gerten, Dieter and Thammer, M and Heinke, J and Lotze-Campen, H and Lucht, Wolfgang and Cramer, Wolfgang},
+  journal={Hydrology and Earth System Sciences},
+  volume={15},
+  number={5},
+  pages={1641--1660},
+  year={2011},
+  publisher={Copernicus GmbH}
+}
+
 @article{fader2013,
   title={Spatial decoupling of agricultural production and consumption: quantifying dependences of countries on food imports due to domestic land and water constraints},
   author={Fader, Marianela and Gerten, Dieter and Krause, Michael and Lucht, Wolfgang and Cramer, Wolfgang},
@@ -85,6 +107,17 @@
   organization={Food \& Agriculture Organisation of the United Nations}
 }
 
+@article{fraser2015,
+  title={Food stocks and grain reserves: evaluating whether storing food creates resilient food systems},
+  author={Fraser, Evan DG and Legwegoh, Alexander and Krishna, KC},
+  journal={Journal of Environmental Studies and Sciences},
+  volume={5},
+  number={3},
+  pages={445--458},
+  year={2015},
+  publisher={Springer}
+}
+
 @article{galloway2007,
   title={International trade in meat: The tip of the pork chop},
   author={Galloway, James N and Burke, Marshall and Bradford, G Eric and Naylor, Rosamond and Falcon, Walter and Chapagain, Ashok K and Gaskell, Joanne C and McCullough, Ellen and Mooney, Harold A and Oleson, Kirsten LL and others},
@@ -103,12 +136,40 @@
   year={in revision}
 }
 
+@article{godar2015,
+  title={Towards more accurate and policy relevant footprint analyses: Tracing fine-scale socio-environmental impacts of production to consumption},
+  author={Godar, Javier and Persson, U Martin and Tizado, E Jorge and Meyfroidt, Patrick},
+  journal={Ecological Economics},
+  volume={112},
+  pages={25--35},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{headey2011,
+  title={Rethinking the global food crisis: The role of trade shocks},
+  author={Headey, Derek},
+  journal={Food Policy},
+  volume={36},
+  number={2},
+  pages={136--146},
+  year={2011},
+  publisher={Elsevier}
+}
+
 @book{hoekstra2008,
   title={Globalization of water: Sharing the planet's freshwater resources},
   author={Hoekstra, Arjen Y and Chapagain, Ashok K},
   year={2008},
   publisher={Wiley Blackwell},
   address={Malden, MA}
+}
+
+@techreport{jones2015,
+  author={Jones, Aled and Hiller, Bradley}, 
+  title={Resilience Taskforce Subreport Annex B: Review of the reponses to food production shocks},
+  institution={UK Global Food Security Programme},
+  year={2015}
 }
 
 @manual{kao2015,
@@ -141,6 +202,16 @@ Organization (FAO) of the United Nations},
   doi={10.1093/biosci/biu225}
 }
 
+@article{martinez2014,
+  title={The environmentalism of the poor},
+  author={Martinez-Alier, Joan},
+  journal={Geoforum},
+  volume={54},
+  pages={239--241},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @article{meyfroidt2013,
   title={Globalization of land use: distant drivers of land change and geographic displacement of land use},
   author={Meyfroidt, Patrick and Lambin, Eric F and Erb, Karl-Heinz and Hertel, Thomas W},
@@ -165,6 +236,17 @@ Organization (FAO) of the United Nations},
   doi={10.5194/hess-18-503-2014}
 }
 
+@article{oliveira2016,
+  title={The politics of flexing soybeans: China, Brazil and global agroindustrial restructuring},
+  author={Oliveira, Gustavo de LT and Schneider, Mindi},
+  journal={The Journal of Peasant Studies},
+  volume={43},
+  number={1},
+  pages={167--194},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
 @article{pielou1966,
   title={The measurement of diversity in different types of biological collections},
   author={Pielou, Evelyn C},
@@ -176,6 +258,17 @@ Organization (FAO) of the United Nations},
   doi={10.1016/0022-5193(66)90013-0}
 }
 
+@article{piesse2009,
+  title={Three bubbles and a panic: An explanatory review of recent food commodity price events},
+  author={Piesse, Jenifer and Thirtle, Colin},
+  journal={Food policy},
+  volume={34},
+  number={2},
+  pages={119--129},
+  year={2009},
+  publisher={Elsevier}
+}
+
 @article{porkka2013,
   title={From food insufficiency towards trade dependency: A historical analysis of global food availability},
   author={Porkka, Miina and Kummu, Matti and Siebert, Stefan and Varis, Olli},
@@ -185,6 +278,13 @@ Organization (FAO) of the United Nations},
   pages={e82714},
   year={2013},
   doi={10.1371/journal.pone.0082714}
+}
+
+@book{prakash2011,
+  title={Safeguarding food security in volatile global markets},
+  author={Prakash, Adam and others},
+  year={2011},
+  publisher={Food and Agriculture Organization of the United Nations}
 }
 
 @article{puma2015,
@@ -229,6 +329,13 @@ Organization (FAO) of the United Nations},
   year={2015},
   publisher={Elsevier},
   doi={10.1016/j.foodpol.2015.10.004}
+}
+
+@book{schanbacher2010,
+  title={The politics of food: the global conflict between food security and food sovereignty},
+  author={Schanbacher, William D},
+  year={2010},
+  publisher={ABC-CLIO}
 }
 
 @conference{shafaeddin2005,
